--- a/Desktop/Code projects/Personal Projects/Smart-Cgpa-Calculator/backend/package.json
+++ b/Desktop/Code projects/Personal Projects/Smart-Cgpa-Calculator/backend/package.json
@@ -9,15 +9,19 @@
     "build": "prisma generate && tsc",
     "start": "node dist/server.js",
     "vercel-build": "prisma generate && prisma migrate deploy",
+    "postinstall": "prisma generate",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
     "migrate": "prisma migrate dev",
-    "migrate:deploy": "prisma migrate deploy",
-    "studio": "prisma studio",
-    "generate": "prisma generate"
+    "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.12",
     "@prisma/client": "^5.7.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "next-auth": "^4.24.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "cors": "^2.8.5",
