--- a/Desktop/Code projects/Personal Projects/Smart-Cgpa-Calculator/backend/package.json
+++ b/Desktop/Code projects/Personal Projects/Smart-Cgpa-Calculator/backend/package.json
@@ -19,26 +19,27 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@prisma/client": "^5.7.1",
+    "connect-pg-simple": "^9.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "next-auth": "^4.24.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "connect-pg-simple": "^9.0.1",
     "pdfkit": "^0.15.0"
   },
   "devDependencies": {
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/node": "^20.10.6",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20.10.6",
+    "@types/pdfkit": "^0.13.6",
     "prisma": "^5.7.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
-    "@types/pdfkit": "^0.13.6"
+    "typescript": "^5.3.3"
   }
 }
